SERVER-54948 Calling `shardCollection` after `enableSharding` from a different MongoS is not causally consistent