src/mongo/db/s/create_collection_coordinator.cpp
@@ -554,11 +554,11 @@ void CreateCollectionCoordinator::_checkCommandArguments(OperationContext* opCtx
         auto catalogCache = Grid::get(opCtx)->catalogCache();
 
         auto dbInfo = uassertStatusOK(catalogCache->getDatabase(opCtx, nss().db()));
-        if (dbInfo.shardingEnabled()) {
-            return true;
+        if (!dbInfo.shardingEnabled()) {
+            sharding_ddl_util::linearizeCSRSReads(opCtx);
+            dbInfo = uassertStatusOK(catalogCache->getDatabaseWithRefresh(opCtx, nss().db()));
         }
 
-        dbInfo = uassertStatusOK(catalogCache->getDatabaseWithRefresh(opCtx, nss().db()));
         return dbInfo.shardingEnabled();
     }();
 
